# USDAgent

./: .gitattributes  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: index.md  quickstart.md  tools-reference.md
examples/: 01_warehouse.py  02_city_block.py  03_robot_test_scene.py  langchain_scratch.py
src/usdagent/: __init__.py  agent.py  cli.py  llm.py  prompts.py  schemas.py
src/usdagent/omniverse/: kit_extension.py
src/usdagent/tools/: __init__.py  materials.py  prims.py  python_exec.py  scatter.py  stage.py  transforms.py  validate.py
tests/: test_agent.py  test_e2e.py  test_tools.py
tests/fixtures/: empty_stage.usda  simple_scene.usda
