[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usdagent"
version = "0.1.0"
description = "Agent framework for orchestrating USD scenes via natural language"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["usd", "omniverse", "agent", "llm", "vfx", "3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "usd-core>=24.0",
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
    "anthropic>=0.30",
    "openai>=1.30",
    "langchain-ollama>=0.2",
    "pydantic>=2.7",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
usdagent = "usdagent.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/usdagent"
Documentation = "https://your-org.github.io/usdagent"
Repository = "https://github.com/your-org/usdagent"
Issues = "https://github.com/your-org/usdagent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/usdagent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "llm: marks tests that call a live LLM (deselect with -m 'not llm')",
    "omniverse: marks tests that require Omniverse Kit",
]
addopts = "--cov=usdagent --cov-report=term-missing -q"

[tool.coverage.run]
source = ["src/usdagent"]
omit = ["src/usdagent/omniverse/*"]
